@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.281 (gritter) 11/23/04
+.\"     Sccsid: @(#)nail.1	2.282 (gritter) 12/2/04
 .\"
-.TH NAIL 1 "11/23/04" "nail 11.18" "User Commands"
+.TH NAIL 1 "12/2/04" "nail 11.18" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -2402,6 +2402,18 @@ just as if the surrounding part was of type
 .TP
 .B quiet
 Suppresses the printing of the version when first invoked.
+.TP
+.B record-resent
+If both this variable and the
+.I record
+variable are set,
+the
+.I resend
+and
+.I Resend
+commands save messages to the
+.I record
+folder as it is normally only done for newly composed messages.
 .TP
 .B Replyall
 Reverses the sense of reply and Reply commands.
